superadmin components added

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,7 +10,8 @@
           <label class="block text-sm font-medium mb-2" for="password">Password</label>
           <input type="password" id="password" name="password" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your password" />
         </div>
-        <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/customer">Login</a></button>
+        <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/customer">CustomerLogin</a></button>
+        <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/superadmin">SuperAdminLogin</a></button>
       </form>
       <p class="text-gray-600 mt-4">Don't have an account? <a routerLink="/register" class="text-blue-500">Register here</a></p>
     </div>
