--- a/src/app/components/customercomponents/cart/cart.component.html
+++ b/src/app/components/customercomponents/cart/cart.component.html
@@ -1,9 +1,10 @@
+<app-header></app-header>
 <section class="container mx-auto mt-8">
     <h2 class="text-2xl font-bold mb-4">Your Cart</h2>
     <div *ngFor="let item of cart" class="flex justify-between items-center border-b py-2">
       <div>
-        <h3 class="text-lg font-semibold">{{ item.name }}</h3>
-        <p>Price: {{ item.price }}</p>
+        <h3 class="text-lg font-semibold">{{ item.MedicineName }}</h3>
+        <p>Price: {{ item.UnitPrice }}</p>
       </div>
       <div>
         <button class="px-4 py-2 rounded bg-red-500 hover:bg-red-600 text-white">Remove</button>
