--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -30,7 +30,7 @@
           <label class="block text-sm font-medium mb-2" for="confirmPassword">Confirm Password</label>
           <input type="password" id="confirmPassword" name="confirmPassword" class="w-full px-3 py-2 border rounded-md" placeholder="Confirm your password" />
         </div>
-        <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Register</button>
+        <button routerLink="/customerform" type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Register</button>
       </form>
       <p class="text-gray-600 mt-4">Already have an account? <a routerLink="/login" class="text-blue-500">Login here</a></p>
     </div>
