branch component added

--- a/src/app/components/superadmincomponents/superadmin/superadmin.component.html
+++ b/src/app/components/superadmincomponents/superadmin/superadmin.component.html
@@ -6,7 +6,7 @@
     <div class="w-3/4 m-20">
         <div class="mt-8">
             <button routerLink="/storeownerdetails" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600 mb-4">Manage Store Owners</button>
-            <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600 mb-4">Manage Branches</button>
+            <button routerLink="/branchdetails" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600 mb-4">Manage Branches</button>
             <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Manage Medicines</button>
         </div>
     </div>
