--- a/src/app/components/customercomponents/cart/cart.component.html
+++ b/src/app/components/customercomponents/cart/cart.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-2xl font-bold mb-4">Your Cart</h2>
     <div *ngFor="let item of cart" class="flex justify-between items-center border-b py-2">
       <div>
-        <h3 class="text-lg font-semibold">{{ item.MedicineName }}</h3>
+        <h3 class="text-lg font-semibold">{{ item.Name }}</h3>
         <p>Price: {{ item.UnitPrice }}</p>
       </div>
       <div>
