--- a/src/app/components/superadmincomponents/branchdetails/branchdetails.component.html
+++ b/src/app/components/superadmincomponents/branchdetails/branchdetails.component.html
@@ -1,7 +1,6 @@
 <app-superadminheader></app-superadminheader>
 
-<button class="ml-10 mt-8 px-4 py-2 rounded bg-blue-500 hover:bg-blue-600 text-white"><a routerLink="/storeownerform">Add New</a></button>
-<button class="ml-10 mt-8 px-4 py-2 rounded bg-blue-500 hover:bg-blue-600 text-white"><a routerLink="">Update Existing</a></button>
+<button class="ml-10 mt-8 px-4 py-2 rounded bg-blue-500 hover:bg-blue-600 text-white"><a routerLink="/branchdetailsform">Add New</a></button>
 
 @if (branches.length == 0) {
   <h3>No Data To Show</h3>
@@ -14,22 +13,23 @@
               <th style="border: 1px solid #ddd; padding: 8px;">Branch Id</th>
               <th style="border: 1px solid #ddd; padding: 8px;">Branch Name</th>
               <th style="border: 1px solid #ddd; padding: 8px;">Address</th>
-              <th style="border: 1px solid #ddd; padding: 8px;"><button (click)="ToggleDelete()" style="padding: 8px; background-color: #4CAF50; color: white; border: none; cursor: pointer; border-radius: 4px;">Enable Delete</button></th>
           </tr>
       </thead>
       <tbody>
           @for (branch of branches; track $index) 
           {
               <tr>  
-                  <td style="border: 1px solid #ddd; padding: 8px;">{{ branches.BranchId }}</td>
-                  <td style="border: 1px solid #ddd; padding: 8px;">{{ branches.BranchName }}</td>
-                  <td style="border: 1px solid #ddd; padding: 8px;">{{ branches.Address }}</td>
-                  @if (canDelete) 
-                  {
-                      <td style="border: 1px solid #ddd; padding: 8px;">
-                          <button (click)="deleteRow()" style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Delete</button>
-                      </td>
-                  }
+                  <td style="border: 1px solid #ddd; padding: 8px;">{{ branch.BranchId }}</td>
+                  <td style="border: 1px solid #ddd; padding: 8px;">{{ branch.BranchName }}</td>
+                  <td style="border: 1px solid #ddd; padding: 8px;">{{ branch.Address }}</td>
+
+                    <td style="border: 1px solid #ddd; padding: 8px;">
+                        <button (click)="deleteRow()" style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Delete</button>
+                    </td>
+                    <td style="border: 1px solid #ddd; padding: 8px;">
+                        <button (click)="editRow()" style="padding: 8px; background-color: #14073c; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
+                    </td>
+            
               </tr>
           }
       </tbody>
