--- a/src/app/components/superadmincomponents/storeownerdetails/storeownerdetails.component.html
+++ b/src/app/components/superadmincomponents/storeownerdetails/storeownerdetails.component.html
@@ -24,7 +24,7 @@
           {
               <tr>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ strowner.OwnerId }}</td>
-                  <td style="border: 1px solid #ddd; padding: 8px;">{{ strowner.Name }}</td>
+                  <td style="border: 1px solid #ddd; padding: 8px;">{{ strowner.OwnerName }}</td>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ strowner.Email }}</td>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ strowner.BranchId }}</td>
                   @if (canDelete)
