--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,6 @@
-<div class="flex justify-center items-center h-screen bg-gray-200">
+<div class="bg-gray-200 pt-4">
+<div class="font-bold text-2xl ml-7">AutoMed</div>
+<div class="h-screen flex justify-center items-center">
     <div class="p-8 bg-white rounded-lg shadow-lg">
       <h2 class="text-2xl font-semibold mb-4">Login</h2>
       <form>
@@ -10,10 +12,9 @@
           <label class="block text-sm font-medium mb-2" for="password">Password</label>
           <input type="password" id="password" name="password" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your password" />
         </div>
-        <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/customer">CustomerLogin</a></button>
-        <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/superadmin">SuperAdminLogin</a></button>
+        <button (click)="login()" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Login</button>
       </form>
       <p class="text-gray-600 mt-4">Don't have an account? <a routerLink="/register" class="text-blue-500">Register here</a></p>
     </div>
 </div>
-  
+</div>
