working on storeowner portal

--- a/src/app/components/superadmincomponents/superadmin/superadmin.component.html
+++ b/src/app/components/superadmincomponents/superadmin/superadmin.component.html
@@ -7,7 +7,8 @@
         <div class="mt-8">
             <button routerLink="/storeownerdetails" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600 mb-4">Manage Store Owners</button>
             <button routerLink="/branchdetails" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600 mb-4">Manage Branches</button>
-            <button routerLink="/medicinedetails" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Manage Medicines</button>
+            <button routerLink="/medicinedetails" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600 mb-4">Manage Medicines</button>
+            <button routerLink="/" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">View Reports</button>
         </div>
     </div>
 </div>
