--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,6 +12,7 @@
         </div>
         <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/customer">CustomerLogin</a></button>
         <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/superadmin">SuperAdminLogin</a></button>
+        <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/storeowner">StoreOwnerLogin</a></button>
       </form>
       <p class="text-gray-600 mt-4">Don't have an account? <a routerLink="/register" class="text-blue-500">Register here</a></p>
     </div>
