--- a/src/app/components/reusablecomponents/superadminheader/superadminheader.component.html
+++ b/src/app/components/reusablecomponents/superadminheader/superadminheader.component.html
@@ -1,10 +1,10 @@
 <header class="bg-gray-800 text-white py-4 px-8">
     <div class="flex justify-between items-center">
-        <img routerLink="/customer" src="assets/logo.png" alt="AutoMed Logo" class="w-12 h-12 mr-2 cursor-pointer">
-        <h1 class="text-3xl font-bold cursor-pointer" routerLink="/superadmin">SuperAdmin</h1>
         <div class="flex items-center">
-            <h1 class="text-2xl font-bold cursor-pointer" routerLink="/superadmin">AutoMed</h1>
-            <button class="px-4 py-2 rounded bg-lime-500 hover:bg-lime-600 ml-4" routerLink="">Log Out</button>
+            <img routerLink="/customer" src="assets/logo.png" alt="AutoMed Logo" class="w-12 h-12 mr-2 cursor-pointer">
+            <h1 class="text-2xl font-bold cursor-pointer" routerLink="/superadmin">AutoMed</h1>       
         </div>
+        <h1 class="text-3xl font-bold cursor-pointer" routerLink="/superadmin">SuperAdmin</h1>
+        <button class="px-4 py-2 rounded bg-lime-500 hover:bg-lime-600 ml-4" routerLink="/login">Log Out</button>
     </div>  
 </header>
