--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,3 +1,5 @@
+<div class="bg-gray-200 pt-2">
+  <div class="font-bold text-3xl ml-7">AutoMed</div>
 <div class="flex justify-center items-center h-screen bg-gray-200">
     <div class="p-8 bg-white rounded-lg shadow-lg">
       <h2 class="text-2xl font-semibold mb-4">Register</h2>
@@ -18,8 +20,9 @@
           <label class="block text-sm font-medium mb-2" for="confirmPassword">Confirm Password</label>
           <input type="password" id="confirmPassword" name="confirmPassword" class="w-full px-3 py-2 border rounded-md" placeholder="Confirm your password" />
         </div>
-        <button (click)="register()" routerLink="/customerform" type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Register</button>
+        <button (click)="register()" routerLink="/login" type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Register</button>
       </form>
       <p class="text-gray-600 mt-4">Already have an account? <a routerLink="/login" class="text-blue-500">Login here</a></p>
     </div>
   </div>
+</div>
