--- a/src/app/components/customercomponents/customerform/customerform.component.html
+++ b/src/app/components/customercomponents/customerform/customerform.component.html
@@ -3,7 +3,6 @@
     <h2 class="text-2xl font-semibold mb-4">Details Form</h2>
     <form class="grid grid-cols-2 gap-4">
 
-      <div>
         <div class="mb-4">
           <label class="block text-sm font-medium mb-2" for="age">Age</label>
           <input type="number" id="age" name="age" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your age" />
@@ -23,9 +22,7 @@
           <label class="block text-sm font-medium mb-2" for="contactNo">Contact No</label>
           <input type="text" id="contactNo" name="contactNo" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your contact number" />
         </div>
-      </div>
 
-      <div>
         <div class="mb-4">
           <label class="block text-sm font-medium mb-2" for="bloodGroup">Blood Group</label>
           <select id="bloodGroup" name="bloodGroup" class="w-full px-3 py-2 border rounded-md">
@@ -50,8 +47,12 @@
           <label class="block text-sm font-medium mb-2" for="prescription">Prescription</label>
           <textarea id="prescription" name="prescription" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your prescription"></textarea>
         </div>
-      </div>
 
+        <div class="mb-4">
+          <label class="block text-sm font-medium mb-2" for="prescription">BranchId</label>
+          <textarea id="prescription" name="prescription" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your closest branch id"></textarea>
+        </div>
+        
       <button type="submit" routerLink="/customer" class="col-span-2 w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Save Details</button>
 
     </form>
