--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,7 +13,7 @@
           <input type="password" id="password" name="password" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your password" />
         </div>
         <!-- <button (click)="login()" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Login</button> -->
-        <button routerLink="/customer" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Login</button>
+        <button routerLink="/customerform" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Login</button>
         <button routerLink="/storeowner" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Store Owner</button>
         <button routerLink="/superadmin" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Superadmin</button>
 
