--- a/src/app/components/storeownercomponents/storeowner/storeowner.component.html
+++ b/src/app/components/storeownercomponents/storeowner/storeowner.component.html
@@ -3,7 +3,7 @@
     <app-storeownersidepanel></app-storeownersidepanel>
     <div class="w-3/4 m-20">
         <div class="mt-8">
-            <button routerLink="/storeownerdetails" (click)="showNewPurchaseForm()" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600 mb-4">New Purchase</button>
+            <button (click)="showNewPurchaseForm()" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600 mb-4">New Purchase</button>
             <div *ngIf="showPurchaseForm">
                 <div class="form-group">
                     <label for="isNewCustomer">Is this a new customer?</label>
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <button routerLink="/inventory" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600 mb-4">Manage Inventory</button>
-            <button routerLink="/" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">View Reports</button>
+            <button routerLink="/branchreports" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">View Reports</button>
         </div>
     </div>
 </div>
