--- a/src/app/components/superadmincomponents/branchdetails/branchdetails.component.html
+++ b/src/app/components/superadmincomponents/branchdetails/branchdetails.component.html
@@ -18,7 +18,7 @@
       <tbody>
           @for (branch of branches; track $index)
           {
-              <tr>  
+              <tr>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ branch.BranchId }}</td>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ branch.BranchName }}</td>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ branch.Address }}</td>
@@ -27,9 +27,9 @@
                         <button (click)="deleteRow()" style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Delete</button>
                     </td>
                     <td style="border: 1px solid #ddd; padding: 8px;">
-                        <button (click)="editRow()" style="padding: 8px; background-color: #14073c; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
+                        <button (click)="editRow()" style="padding: 10px; background-color: #04c825; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
                     </td>
-            
+
               </tr>
           }
       </tbody>
