--- a/src/app/components/superadmincomponents/storeownerdetails/storeownerdetails.component.html
+++ b/src/app/components/superadmincomponents/storeownerdetails/storeownerdetails.component.html
@@ -27,12 +27,12 @@
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ strowner.BranchId }}</td>
 
                   <td style="border: 1px solid #ddd; padding: 8px;">
-                    <button (click)="deleteRow()" style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Delete</button>
+                    <button (click)="deleteRow(strowner.OwnerId)" style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Delete</button>
                   </td>
                   <td style="border: 1px solid #ddd; padding: 8px;">
-                    <button (click)="editRow()" style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
+                    <button (click)="editRow(strowner.OwnerId, strowner)" style="padding: 10px; background-color: #06c93e; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
                   </td>
-                  
+
               </tr>
           }
       </tbody>
