--- a/src/app/components/customercomponents/buymedicine/buymedicine.component.html
+++ b/src/app/components/customercomponents/buymedicine/buymedicine.component.html
@@ -1,7 +1,7 @@
 
 @if (medicines.length == 0) {
   <h3>No Data To Show</h3>
-} 
+}
 @else {
   <div class="flex m-10">
   <table style="width: 100%; border-collapse: collapse;">
@@ -17,9 +17,9 @@
           </tr>
       </thead>
       <tbody>
-          @for (medicine of medicines; track $index) 
+          @for (medicine of medicines; track $index)
           {
-              <tr>  
+              <tr>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ medicine.MedicineId }}</td>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ medicine.Name }}</td>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ medicine.Manufacturer }}</td>
@@ -27,11 +27,11 @@
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ medicine.BatchNumber }}</td>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ medicine.ExpiryDate }}</td>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ medicine.Category }}</td>
-                  
+
                     <td style="border: 1px solid #ddd; padding: 8px;">
-                        <button (click)="buyMedicine()" style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Buy Now</button>
+                        <button style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Buy Now</button>
                     </td>
-                                
+
               </tr>
           }
       </tbody>
