--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,17 +5,17 @@
         <h2 class="text-2xl font-semibold mb-4">Login</h2>
         <form>
           <div class="mb-4">
-            <label [(ngModel)]="email" class="block text-sm font-medium mb-2" for="email">Email</label>
-            <input type="email" id="email" name="email" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your email" />
+            <label class="block text-sm font-medium mb-2" for="email">Email</label>
+            <input [(ngModel)]="email" type="email" id="email" name="email" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your email" />
           </div>
           <div class="mb-4">
             <label class="block text-sm font-medium mb-2" for="password">Password</label>
             <input [(ngModel)]="password" type="password" id="password" name="password" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your password" />
           </div>
-          <!-- <button (click)="login()" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Login</button> -->
-          <button class="w-full my-2 bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/customerform">Login</a></button>
-          <button class="w-full my-2 bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/storeowner">Store Owner</a></button>
-          <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/superadmin">Superadmin</a></button>
+          <button (click)="login()" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Login</button>
+          <!-- <button class="w-full my-2 bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Login</button> -->
+          <!-- <button class="w-full my-2 bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/storeowner">Store Owner</a></button>
+          <button class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600"><a routerLink="/superadmin">Superadmin</a></button> -->
 
         </form>
         <p class="text-gray-600 mt-4">Don't have an account? <a routerLink="/register" class="text-blue-500">Register here</a></p>
