--- a/src/app/components/superadmincomponents/branchdetails/branchdetails.component.html
+++ b/src/app/components/superadmincomponents/branchdetails/branchdetails.component.html
@@ -23,11 +23,11 @@
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ branch.BranchName }}</td>
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ branch.Address }}</td>
 
-                    <td style="border: 1px solid #ddd; padding: 8px;">
-                        <button (click)="deleteRow()" style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Delete</button>
+                    <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">
+                        <button (click)="editRow(branch.BranchId, branch)" style="padding: 10px; width: 60px; background-color: #04c825; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
                     </td>
-                    <td style="border: 1px solid #ddd; padding: 8px;">
-                        <button (click)="editRow()" style="padding: 10px; background-color: #04c825; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
+                    <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">
+                        <button (click)="deleteRow(branch.BranchId)" style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Delete</button>
                     </td>
 
               </tr>
