customer portal changes

--- a/src/app/components/customercomponents/customerform/customerform.component.html
+++ b/src/app/components/customercomponents/customerform/customerform.component.html
@@ -1,31 +1,41 @@
 <div class="flex justify-center items-center h-screen bg-gray-200">
   <div class="p-8 bg-white rounded-lg shadow-lg">
     <h2 class="text-2xl font-semibold mb-4">Details Form</h2>
-    <form class="grid grid-cols-2 gap-4">
+    <form class="grid grid-cols-2 gap-4" [formGroup]="customerForm" (ngSubmit)="save()">
 
         <div class="mb-4">
           <label class="block text-sm font-medium mb-2" for="age">Age</label>
-          <input type="number" id="age" name="age" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your age" />
+          <input type="number" id="age" name="age" formControlName="age" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your age" />
+          @if(customerForm.controls['age'].dirty ||  customerForm.controls['age'].invalid){
+            <div *ngIf="customerForm.controls['age'].errors?.['required']" class="text-red-500">Age is required </div>
+          }
+          
         </div>
 
         <div class="mb-4">
           <label class="block text-sm font-medium mb-2" for="gender">Gender</label>
-          <select id="gender" name="gender" class="w-full px-3 py-2 border rounded-md">
+          <select id="gender" name="gender" formControlName="gender" class="w-full px-3 py-2 border rounded-md">
             <option value="">Select Gender</option>
             <option value="Male">Male</option>
             <option value="Female">Female</option>
             <option value="Other">Other</option>
           </select>
+          @if(customerForm.controls['gender'].dirty || customerForm.controls['gender'].invalid){
+            <div *ngIf="customerForm.controls['gender'].errors?.['required']" class="text-red-500">Gender is required </div>
+          }
         </div>
 
         <div class="mb-4">
           <label class="block text-sm font-medium mb-2" for="contactNo">Contact No</label>
-          <input type="text" id="contactNo" name="contactNo" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your contact number" />
+          <input type="text" id="contactNo" name="contactNo" formControlName="contactNo" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your contact number"/>
+          @if(customerForm.controls['contactNo'].dirty || customerForm.controls['contactNo'].invalid){
+            <div *ngIf="customerForm.controls['contactNo'].errors?.['required']" class="text-red-500">Contact Number is required </div>
+          }
         </div>
 
         <div class="mb-4">
           <label class="block text-sm font-medium mb-2" for="bloodGroup">Blood Group</label>
-          <select id="bloodGroup" name="bloodGroup" class="w-full px-3 py-2 border rounded-md">
+          <select id="bloodGroup" name="bloodGroup" formControlName="bloodGroup" class="w-full px-3 py-2 border rounded-md">
             <option value="">Select Blood Group</option>
             <option value="A+">A+</option>
             <option value="A-">A-</option>
@@ -36,24 +46,40 @@
             <option value="O+">O+</option>
             <option value="O-">O-</option>
           </select>
+          @if(customerForm.controls['bloodGroup'].dirty || customerForm.controls['bloodGroup'].invalid){
+            <div *ngIf="customerForm.controls['bloodGroup'].errors?.['required']" class="text-red-500">Blood Group is required </div>
+          }
         </div>
 
         <div class="mb-4">
           <label class="block text-sm font-medium mb-2" for="address">Address</label>
-          <textarea id="address" name="address" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your address"></textarea>
+          <textarea id="address" name="address" formControlName="address" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your address"></textarea>
+          @if(customerForm.controls['address'].dirty || customerForm.controls['address'].invalid){
+            <div *ngIf="customerForm.controls['address'].errors?.['required']" class="text-red-500">Address is required </div>
+          }
         </div>
 
         <div class="mb-4">
           <label class="block text-sm font-medium mb-2" for="prescription">Prescription</label>
-          <textarea id="prescription" name="prescription" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your prescription"></textarea>
+          <textarea id="prescription" name="prescription" formControlName="prescription" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your prescription"></textarea>
+          @if(customerForm.controls['prescription'].dirty || customerForm.controls['prescription'].invalid){
+            <div *ngIf="customerForm.controls['prescription'].errors?.['required']" class="text-red-500">Prescription is required </div>
+          }
         </div>
 
         <div class="mb-4">
-          <label class="block text-sm font-medium mb-2" for="prescription">BranchId</label>
-          <textarea id="prescription" name="prescription" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your closest branch id"></textarea>
+          <label class="block text-sm font-medium mb-2" for="prescription">Branch Name</label>
+          <select id="brancName" name="branchName" class="w-full px-3 py-2 border rounded-md">
+          <option value="">Select closest branch</option>
+          @for(branch of branches; track branch.BranchName){
+            <option>{{branch.BranchName}}</option>
+          }
+          </select>
+          <!-- @if(customerForm.controls['branchName'].dirty || customerForm.controls['branchName'].touched || customerForm.controls['branchName'].invalid){
+            <div *ngIf="customerForm.controls['branchName'].errors?.['required']" class="text-red-500">Branch Name is required </div>
+          } -->
         </div>
-        
-      <button type="submit" routerLink="/customer" class="col-span-2 w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Save Details</button>
+      <button type="submit" class="col-span-2 w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Save Details</button>
 
     </form>
 
