--- a/src/app/components/reusablecomponents/sadminsidepanel/sadminsidepanel.component.html
+++ b/src/app/components/reusablecomponents/sadminsidepanel/sadminsidepanel.component.html
@@ -1,9 +1,9 @@
-<div class="bg-gray-200 p-4 h-screen flex items-center">
+<div class="bg-gray-200 p-4 h-screen flex items-start pt-20">
     <div class="bg-white p-4 rounded-lg shadows">
-        <h2 class="text-xl font-semibold mb-4" style="width: 200px;">Total Sales</h2>
-        <div class="bg-blue-500 text-white px-4 py-2 rounded-lg mb-4">
-            <p class="text-lg font-semibold">{{salesamount}}</p>
+        <h2 class="text-xl font-semibold mb-4" style="width: 200px;">Total Gross Revenue</h2>
+        <div class="bg-blue-500 text-white px-4 py-2 rounded-lg mb-4 w-fit pr-7 ml-8">
+            <p class="text-lg font-semibold">₹ {{salesAmount}}</p>
         </div>
     </div>
-    
+
 </div>
