--- a/src/app/components/storeownercomponents/storeowner/storeowner.component.html
+++ b/src/app/components/storeownercomponents/storeowner/storeowner.component.html
@@ -8,8 +8,8 @@
                 <div class="form-group">
                     <label for="isNewCustomer">Is this a new customer?</label>
                     <div class="flex m-5">
-                        <button routerLink="/register" class="bg-green-500 text-white font-bold py-2 px-4 rounded-md hover:bg-green-600 mr-2" (click)="setIsNewCustomer(true)">Yes</button>
-                        <button routerLink="/login" class="bg-red-500 text-white font-bold py-2 px-4 rounded-md hover:bg-red-600" (click)="setIsNewCustomer(false)">No</button>
+                        <button class="bg-green-500 text-white font-bold py-2 px-4 rounded-md hover:bg-green-600 mr-2" (click)="setIsNewCustomer(true)">Yes</button>
+                        <button class="bg-red-500 text-white font-bold py-2 px-4 rounded-md hover:bg-red-600" (click)="setIsNewCustomer(false)">No</button>
                     </div>
                 </div>
             </div>
