--- a/src/app/components/superadmincomponents/branchdetailsform/branchdetailsform.component.html
+++ b/src/app/components/superadmincomponents/branchdetailsform/branchdetailsform.component.html
@@ -7,12 +7,12 @@
                 <input [(ngModel)]="BranchId" type="text"class="w-full px-3 py-2 border rounded-md" placeholder="Enter Branch Id" />
             </div> -->
             <div class="mb-4">
-                <label class="block text-sm font-medium mb-2">Branch Name</label>
-                <input [(ngModel)]="BranchName" type="text"class="w-full px-3 py-2 border rounded-md" placeholder="Enter Branch Name" />
+                <label class="block text-sm font-medium mb-2" for="branchname">Branch Name</label>
+                <input [(ngModel)]="BranchName" name="branchname" id="branchname" type="text"class="w-full px-3 py-2 border rounded-md" placeholder="Enter Branch Name" />
             </div>
             <div class="mb-4">
-                <label class="block text-sm font-medium mb-2">Address</label>
-                <input [(ngModel)]="Address" type="email" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Address" />
+                <label class="block text-sm font-medium mb-2" for="address">Address</label>
+                <input [(ngModel)]="Address" name="address" type="text" id="address" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Address" />
             </div>
             <button (click)="addBranch()" type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Add Branch</button>
         </form>
