--- a/src/app/components/superadmincomponents/medicinedetailsform/medicinedetailsform.component.html
+++ b/src/app/components/superadmincomponents/medicinedetailsform/medicinedetailsform.component.html
@@ -1,38 +1,38 @@
 <div class="flex justify-center items-center h-screen bg-gray-200">
     <div class="p-8 bg-white rounded-lg shadow-lg">
         <h2 class="text-2xl font-semibold mb-4">Add New Medicine</h2>
-        <form onsubmit="addmed()">
+        <form>
             <div class="grid grid-cols-2 gap-4">
                 <!-- <div class="mb-4">
                     <label class="block text-sm font-medium mb-2">Medicine Id</label>
                     <input [(ngModel)]="MedicineId" type="text" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Medicine Id" />
                 </div> -->
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Name</label>
-                    <input [(ngModel)]="Name" type="text" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Name" />
+                    <label class="block text-sm font-medium mb-2" for="medname">Name</label>
+                    <input [(ngModel)]="Name" type="text" id="medname" name="medname" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Name" />
                 </div>
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Manufacturer</label>
-                    <input [(ngModel)]="Manufacturer" type="text" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Manufacturer" />
+                    <label class="block text-sm font-medium mb-2" for="mft">Manufacturer</label>
+                    <input [(ngModel)]="Manufacturer" type="text" id="mft" name="mft" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Manufacturer" />
                 </div>
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Unit Price</label>
-                    <input [(ngModel)]="UnitPrice" type="number" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Unit Price" />
+                    <label class="block text-sm font-medium mb-2" for="price">Unit Price</label>
+                    <input [(ngModel)]="UnitPrice" type="number" id="price" name="price" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Unit Price" />
                 </div>
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Batch Number</label>
-                    <input [(ngModel)]="BatchNumber" type="number" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Batch Number" />
+                    <label class="block text-sm font-medium mb-2" for="batch">Batch Number</label>
+                    <input [(ngModel)]="BatchNumber" type="text" id="batch" name="batch" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Batch Number" />
                 </div>
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Expiry Date</label>
-                    <input [(ngModel)]="ExpiryDate" type="date" class="w-full px-3 py-2 border rounded-md" />
+                    <label class="block text-sm font-medium mb-2" for="expiry">Expiry Date</label>
+                    <input [(ngModel)]="ExpiryDate" type="date" id="expiry" name="expiry" class="w-full px-3 py-2 border rounded-md" [min]="minDate"/>
                 </div>
                 <div class="mb-4">
-                    <label class="block text-sm font-medium mb-2">Category</label>
-                    <input [(ngModel)]="Category" type="text" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Category" />
+                    <label class="block text-sm font-medium mb-2" for="category">Category</label>
+                    <input [(ngModel)]="Category" type="text" id="category" name="category" class="w-full px-3 py-2 border rounded-md" placeholder="Enter Category" />
                 </div>
             </div>
-            <button type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Add Medicine</button>
+            <button (click)="addMed()" type="submit" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Add Medicine</button>
         </form>
     </div>
 </div>
