--- a/src/app/components/superadmincomponents/medicinedetails/medicinedetails.component.html
+++ b/src/app/components/superadmincomponents/medicinedetails/medicinedetails.component.html
@@ -32,7 +32,7 @@
                   <td style="border: 1px solid #ddd; padding: 8px;">{{ medicine.Category }}</td>
 
                     <td style="border: 1px solid #ddd; padding: 8px; text-align: center ;">
-                        <button (click)="editRow(medicine.MedicineId, medicine)" class="px-10" style="padding: 10px; background-color: #1bd207; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
+                        <button (click)="editRow(medicine.MedicineId)" class="px-10" style="padding: 10px; background-color: #1bd207; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
                     </td>
                     <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">
                         <button (click)="deleteRow(medicine.MedicineId)" style="padding: 8px; background-color: #f44336; color: white; border: none; cursor: pointer; border-radius: 4px;">Delete</button>
