--- a/src/app/components/superadmincomponents/storeownerdetails/storeownerdetails.component.html
+++ b/src/app/components/superadmincomponents/storeownerdetails/storeownerdetails.component.html
@@ -27,7 +27,7 @@
                   <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">{{ branchName.get(strowner.BranchId) }}</td>
 
                   <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">
-                    <button (click)="editRow(strowner.OwnerId, strowner)" class="px-10 w-16" style="padding: 10px; background-color: #06c93e; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
+                    <button (click)="edit(strowner.OwnerId)" class="px-10 w-16" style="padding: 10px; background-color: #06c93e; color: white; border: none; cursor: pointer; border-radius: 4px;">Edit</button>
                   </td>
 
                   <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">
